--- a/angular-client/angular-healthcare/src/app/components/header/header.component.html
+++ b/angular-client/angular-healthcare/src/app/components/header/header.component.html
@@ -1,8 +1,4 @@
 <header>
   <h1>{{ title }}</h1>
-  <app-button
-    color="green"
-    text="Add"
-    (btnClick)="toggleAddPatient()"
-  ></app-button>
+  <a routerLink="/patients/add" *ngIf="hasRoute('/')" class="btn add-form-link"> Add </a>
 </header>
