--- a/angular-client/angular-healthcare/src/app/components/patient-item/patient-item.component.html
+++ b/angular-client/angular-healthcare/src/app/components/patient-item/patient-item.component.html
@@ -5,23 +5,21 @@
   <h4 class="patient">{{ patient.lastName }}</h4>
 </div>
 <div class="patient-item">
-  <!-- <p class="patient">{{ patient.dateOfBirth.toISOString().split("T")[0] }}</p> -->
   <p class="patient">{{ patient.dateOfBirth }}</p>
 </div>
 <div class="patient-item">
   <p class="patient">{{ patient.sex }}</p>
 </div>
 <div class="patient-item patient-item-edit-btns">
-  <app-button
-    color="limegreen"
-    text="Edit"
-    (btnClick)="editPatient()"
-  ></app-button>
+  <a [routerLink]="['/patients/edit', patient.id]" class="btn edit-form-link">
+    Edit
+  </a>
 </div>
 <div class="patient-item">
-  <app-button
-    color="firebrick"
-    text="Delete"
-    (btnClick)="deletePatient()"
-  ></app-button>
+  <a
+    [routerLink]="['/patients/delete', patient.id]"
+    class="btn delete-form-link"
+  >
+    Delete
+  </a>
 </div>
