--- a/angular-client/angular-healthcare/src/app/components/forms/delete-patient/delete-patient.component.html
+++ b/angular-client/angular-healthcare/src/app/components/forms/delete-patient/delete-patient.component.html
@@ -2,7 +2,7 @@
   <p class="delete-message">Are you sure this patient has been consulted?</p>
   <app-button
     color="firebrick"
-    text="Delete"
+    text="Yes"
     (btnClick)="deletePatient()"
   ></app-button>
   <a routerLink="/" class="back-a btn back-btn">Go Back</a>
